# acap

./: .travis.yml  Cargo.toml  LICENSE  README.md  katex-header.html
.github/workflows/: ci.yml
benches/: benches.rs
src/: chebyshev.rs  coords.rs  cos.rs  distance.rs  euclid.rs  exhaustive.rs  hamming.rs  kd.rs  knn.rs  lib.rs  lp.rs  taxi.rs  util.rs  vp.rs
