[package]
name = "acap"
version = "0.1.0"
authors = ["Tavian Barnes <tavianator@tavianator.com>"]
edition = "2018"
description = "A principled API for nearest neighbor search in both metric and non-metric spaces"
repository = "https://github.com/tavianator/acap"
license = "MIT"
keywords = ["ann", "knn", "nearest-neighbors"]
categories = ["algorithms", "data-structures"]

[dependencies]
