[package]
name = "acap"
version = "0.1.0"
authors = ["Tavian Barnes <tavianator@tavianator.com>"]
edition = "2018"
description = "As Close As Possible — nearest neighbor search in Rust."
readme = "README.md"
repository = "https://github.com/tavianator/acap"
license = "MIT"
keywords = ["ann", "knn", "nearest-neighbors"]
categories = ["algorithms", "data-structures"]

[dependencies]
num-traits = "0.2.12"

[dev-dependencies]
criterion = "0.3.2"
rand = "0.7.3"

[[bench]]
name = "benches"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]